# suzume-dsa

./: .gitignore  README.md  pyproject.toml
colab/: making_llm_suzume-dsa.ipynb
docs/: dsa-indexer-finding.md  gguf-scope.md  glm-dsa-tensors.md  training-efficiency.md
src/suzume_dsa/: __init__.py  chat.py  config.py  data.py  export_gguf.py  fim.py  model.py  optim.py  orpo.py  sft.py  tokenizer.py  train.py
src/suzume_dsa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/suzume_dsa/modules/: __init__.py  block.py  ffn.py  mla.py  moe.py  mtp.py  norm.py  rope.py
tests/: test_efficiency.py  test_export.py  test_orpo.py  test_sft.py  test_shapes.py  test_tokenizer_export.py  test_train.py
tools/: check_dataset.py  count_params.py  make_identity_data.py  params.py  tokenizer_eval.py  train_tokenizer.py  vram_calibrate.py
