[project]
name = "suzume-dsa"
version = "0.1.0"
description = "GGUF/llama.cpp ネイティブな glm-dsa 系小型 LLM（モデル名 suzume）"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.0.0",
    "sentencepiece>=0.2.1",
    "tqdm>=4.60.0",
    "numpy>=1.24",
]

[project.scripts]
suzume-dsa-train = "suzume_dsa.train:main"
suzume-dsa-sft = "suzume_dsa.sft:main"
suzume-dsa-export = "suzume_dsa.export_gguf:main"

# --- PyTorch を CPU / CUDA で切り替える（suzume-muon と同じ方式）-----------
# GPU なし(開発コンテナ): uv run ...            （既定で cpu 版）
# GPU あり(本番)        : uv run --no-group cpu --group cu124 ...
[dependency-groups]
cpu = ["torch>=2.4.0"]
cu124 = ["torch>=2.4.0", "bitsandbytes>=0.43.0"]
export = ["gguf>=0.10.0"]
dev = ["pytest>=8.0"]

[tool.uv]
default-groups = ["cpu"]
conflicts = [[{ group = "cpu" }, { group = "cu124" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu124", group = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
